# assignments

./: README.md  assignment2.txt  pyproject.toml  question1.py  question2.py  question3.txt
